@@ -5,7 +5,7 @@ Version: 1.1.7
 Author: Jeff Gentry <geoffjentry@gmail.com>
 Maintainer: Jeff Gentry <geoffjentry@gmail.com>
 Depends: R (>= 2.12.0)
-Imports: httr (>= 0.2.99), bit64
+Imports: methods, httr (>= 0.2.99), bit64
 License: Artistic-2.0
 LazyData: yes
 BuildVignettes: no
